clusters/talos-robbinsdale/apps/media/app/lidarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:latest
          ports:
            - name: http
              containerPort: 8686
              protocol: TCP
          volumeMounts:
            - name: music-volume
              mountPath: /music
            - name: downloads-volume
              mountPath: /downloads
            - name: config-volume
              mountPath: /config
      volumes:
        - name: music-volume
          persistentVolumeClaim:
            claimName: lidarr-music-unas
        - name: downloads-volume
          persistentVolumeClaim:
            claimName: transmission-music-data-unas
        - name: config-volume
          persistentVolumeClaim:
            claimName: lidarr-config-ceph
